# ritmo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  requirements.txt
ritmo/: cli.py
ritmo/commands/: __init__.py  add_habit.py  crud.py  date.py  date_log.py  delete_habit.py  done_habit.py  list_habit.py  manage.py  update_habit.py
ritmo/decorators/: __init__.py  decorators.py
ritmo/models/: __init__.py  models.py
ritmo/session/: session.py
ritmo/sessions/: __init__.py  sessions.py
tests/commands/: test_add_habit.py  test_delete_habit.py  test_done_habit.py  test_update_habit.py
