[tool.poetry]
name = "ritmo"
version = "0.1.0"
description = ""
authors = ["daniarlert <arlertdaniel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.0.0"
click = "^8.1.3"
sqlalchemy = "^1.4.45"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
commitizen = "^2.39.1"
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
ritmo = "ritmo.cli:run"

[project.scripts]
ritmo = "ritmo.cli:run"
